# ace-aac-calc

./: .gitignore  CreateGridSet.py  LICENSE  README.md  package-lock.json  pbcopy  pyproject.toml
.github/workflows/: build-windows.yml
calcstandalone/: calcstandalone.html
calcstandalone/scientific-calculator/app/: page.tsx
calcstandalone/scientific-calculator/components/: calculator.tsx
python-cli/: README.md  pyproject.toml
python-cli/src/scicalc/: __main__.py  web.py
python-cli/src/scicalc/templates/: calculator.html
python-cli/tests/: test_calculator.py
react/: README.md  package-lock.json  package.json
react/components/: calculator.tsx  keyboard-shortcuts.tsx
resources/: ScientificCalc.gridset
scripts/: windows-installer.nsi
src/scicalc/: calculator.py  cli.py  web.py
src/scicalc/templates/: calculator.html
templates/: calculator.html
tests/: test_calculator.py
vanilla-html/: calcstandalone.html
