[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scicalc"
version = "0.1.0"
description = "Scientific Calculator CLI for AAC users"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pyperclip>=1.8.2",
    "numpy>=1.21.0",
    "flask>=2.0.0"
]

[project.scripts]
scicalc = "scicalc.cli:main"
calcweb = "scicalc.web:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
build = [
    "pyinstaller>=6.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/scicalc --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/scicalc"]
package-data = {"scicalc" = ["py.typed", "templates/*"]} 